# xcalc-rewrite

./: CMakeLists.txt  COPYING  README.md  main.cpp
include/: core.cpp  core.h  thunderengine.cpp  thunderengine.h
